<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/loginCard"
    app:cardCornerRadius="@dimen/loginCardRadius"
    android:elevation="5dp"
    android:layout_gravity="center"
    android:layout_marginTop="@dimen/loginViewsMargin"
    android:layout_marginBottom="@dimen/loginViewsMargin"
    android:background="@color/whiteCardColor">

    <LinearLayout
        style="@style/linearParent"
        android:layout_gravity="center"
        android:padding="@dimen/loginViewsMargin">

        <TextView
            style="@style/headerTextPrimary"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:text="로그인" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputEmail"
            style="@style/parent"
            android:layout_marginTop="@dimen/loginViewsMargin">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_email"
                style="@style/modifiedEditText"
                android:hint="@string/login_email_hint"
                android:inputType="textEmailAddress"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputPassword"
            style="@style/parent"
            android:layout_marginTop="@dimen/loginViewsMargin">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_password"
                style="@style/modifiedEditText"
                android:hint="@string/login_password_hint"
                android:maxLines="1"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            style="@style/viewParent"
            android:text="Forgot Password?"
            android:textColor="@color/primaryTextColor"
            android:textSize="@dimen/newsMoreTextSize"
            android:layout_gravity="end"
            android:onClick="viewForgotPAssword"
            android:layout_marginTop="10dp"/>

        <Button
            android:id="@+id/login_button"
            style="@style/loginButton"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:onClick="button_login"
            android:text="로그인" />

        <TextView
            android:id="@+id/login_signUp"
            style="@style/parent"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:onClick="viewRegisterClicked"
            android:background="?attr/selectableItemBackground"
            android:text="@string/login_signup_hint"
            android:textAlignment="center"
            android:textColor="@color/primaryTextColor"
            android:textStyle="bold" />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/signInButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true" />

        <!--<LinearLayout
            android:id="@+id/login_Google"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:background="@drawable/bin_darkblue"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:onClick="button_login"
            android:weightSum="1">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="#ffffff"
                android:src="@drawable/logo_google"
                android:gravity="center" />

            <TextView
                android:id="@+id/login_button_Google"
                android:onClick="button_googleLogin"
                android:layout_width="0dp"
                android:layout_height="38dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="Google 계정으로 로그인"
                android:textColor="#ffffff" />
        </LinearLayout>-->
        <!--<Button
            android:id="@+id/login_Google"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:background="@drawable/bin_darkblue"
            android:onClick="button_login"
            android:text="Google 계정으로 로그인"
            android:textColor="#ffffff" />-->


    </LinearLayout>
</androidx.cardview.widget.CardView>